<?xml version="1.0"?>
<package>
  <name>ackermann_controller</name>
  <version>0.1.0</version>
  <description>ROS Controller for Ackermann vehicles</description>

  <maintainer email="logans@cottsay.net">Scott K Logan</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/ackermann_controller</url> -->

  <author email="logans@cottsay.net">Scott K Logan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>dual_controller_interface</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>dual_controller_interface</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <controller_interface plugin="${prefix}/controller_plugins.xml" />
  </export>
</package>
